SigmaCodebackup3rdSep/objects/Sales_Order_Allocation_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocated Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product Line Item</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Sales Order Allocation Line Items</relationshipLabel>
        <relationshipName>Sales_Order_Allocation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Inventory_Location_Product_Line_Item__r.Inventory_Location_Product__r.Inventory_Location__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>Product_Order_Price_Book__c</referenceTo>
        <relationshipLabel>Sales Order Allocation Line Items</relationshipLabel>
        <relationshipName>Sales_Order_Allocation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Sales Order Allocation Line Items</relationshipLabel>
        <relationshipName>Sales_Order_Allocation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Allocation__c</fullName>
        <label>Sales Order Allocation</label>
        <referenceTo>Sales_Order_Allocation__c</referenceTo>
        <relationshipLabel>Sales Order Allocation Line Items</relationshipLabel>
        <relationshipName>Sales_Order_Allocation_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Ready To Ship</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Order Confirmed</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Order Allocation Line Item</label>
    <nameField>
        <displayFormat>SOALI-{0}</displayFormat>
        <label>Sales Order Allocation Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Allocation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>